@@ -93,7 +93,7 @@ class BannersModelBanner extends JModel
 				// insert new count
 				//sqlsrv change
 				$query->insert('#__banner_tracks');
-				$query->columns(array($db->quoteName('cound'), $db->quoteName('track_type'),
+				$query->columns(array($db->quoteName('count'), $db->quoteName('track_type'),
 								$db->quoteName('banner_id') , $db->quoteName('track_date')));
 				$query->values( '1, 2,' . (int)$id . ',' . $db->Quote($trackDate));
 			}
